fix change password and change initial password routes
