# routes/api.php
@@ -1,10 +1,11 @@
 <?php
 
-use App\Http\Controllers\ChangePasswordController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\LoginController;
 use App\Http\Controllers\RegisterController;
+use App\Http\Controllers\ChangePasswordController;
+use App\Http\Controllers\ChangeInitialPasswordController;
 
 Route::get('/user', function (Request $request) {
     return $request->user();
@@ -12,4 +13,5 @@ Route::get('/user', function (Request $request) {
 
 Route::post('/login', LoginController::class)->name('login');
 Route::post('/register', RegisterController::class)->name('register');
-Route::post('/change-initial-password', ChangePasswordController::class)->name('change_password');
+Route::put('/change-initial-password', ChangeInitialPasswordController::class)->name('change_initial_password');
+Route::put('/change-password', ChangePasswordController::class)->name('change_password');
